--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
     "recommendations": [
         "ms-python.black-formatter",
         "ms-python.python",
-        "samuelcolvin.jinjahtml"
+        "samuelcolvin.jinjahtml",
+        "hossaini.bootstrap-intellisense",
+        "anbuselvanrocky.bootstrap5-vscode"
     ]
 }
